[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "chronostasis"
version = "1.0.0"
description = "OpenEnv flood intelligence environment for Indian river basins"
requires-python = ">=3.10"
dependencies = [
    "earthengine-api>=0.1.400",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "openai>=1.30.0",
    "rasterio>=1.3.0",
    "numpy>=1.26.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server:app"
start = "uvicorn server:app --host 0.0.0.0 --port 7860"